# ads1119-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
examples/: manual_read.rs  simple_read.rs
src/: lib.rs
tests/: tests.rs
