[package]
name = "ads1119"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "=1.0.0-alpha.9"
linux-embedded-hal = { version = "=0.4.0-alpha.3", git = "https://github.com/rust-embedded/linux-embedded-hal", rev = "1f97fd" } 

# [dev-dependencies]
# embedded-hal-mock = "0.9"

[examples]
name = "simple_read"

[profile.release]
lto = true
