[package]
name = "ads1119"
version = "0.2.0"
edition = "2021"

[dependencies]
# the latest RC
embedded-hal = "1.0"
# compatible with embedded-hal 1.0.0-rc.1
linux-embedded-hal = "0.4"
thiserror = "1"

[dev-dependencies]
embedded-hal-mock = { version = "0.10", default-features = false, features = [
    "eh1",
] }

[examples]
name = "simple_read"

[profile.release]
lto = true
